# lancaster

./: .gitignore  AUTHORS  Makefile  Makefile.ORIG  Makefile.am  Makefile.in  README  README.md  TODO  VERSION.mk  a2i.c  a2i.h  accum.c  accum.h  advert.c  advert.h  attrib.c  barrier.h  batch.c  batch.h  cachester.pc  circ.c  circ.h  client.c  clock.c  clock.h  config.h.in  configure  configure.ac  copier.c  copyer.c  datum.h  deleter.c  dict.c  dict.h  dump.c  dump.h  eraser.c  error.c  error.h  (+57 more)
DEBIAN/: control
crons/: submgr.crontab
docs/: TUTORIAL.md
ffi/go/: go.mod
ffi/go/lancaster/: lancaster.go
ffi/go/pubmux/: addrs.go
ffi/go/submux/: main.go
ffi/lisp/: batch.lisp  clock.lisp  datum.lisp  error.lisp  grovel.lisp  lancaster.asd  package.lisp  status.lisp  storage.lisp  test.lisp  toucher.lisp
go/: .gitignore  GOOP.mk  Goopfile  Makefile  README.md
go/cmd/cread/: main.go
go/go-cachester/: cachester.go
go/lib/cachester/: batch.go  cachester.go  index.go  multi_store_index.go  record_location.go  toucher.go  writer.go
go/pub/: testpub.go
go/quotester/: .gitignore  fs.go  quotester.go  quotewalker.go  types.go
go/quotester/quotefs/: fs.go
go/rcvr/: .gitignore  Makefile  mmd.go  rcvr.go  receiver.go
go/rcvr/assets/: cachester.js  index.html  s.html
go/rdr/: api.go  direct.go  reader.go
go/src/commander/: commander.go  death.go  nodeath.go
go/src/lancaster/: batch.go  index.go  lancaster.go  multi_store_index.go  record_location.go  writer.go
go/src/lib/: cachester.go
go/src/lib/test/: qtest.go  types.go
go/src/pubmgr/: .gitignore  Makefile  addrs.go  main.go
go/src/pubmux/: addrs.go  main.go
go/src/rcvr/: .gitignore  Makefile  mmd.go  receiver.go
go/src/rcvr/assets/: cachester.css  cachester.js
go/src/rdr/: .gitignore  Makefile  main.go
go/src/submgr/: .gitignore  Makefile  main.go
go/src/submux/: main.go
java/: .gitignore  Makefile  build.gradle  run  settings.gradle
java/src/main/java/com/peak6/cachester/: CachesterStorage.java  CachesterStorageLoader.java  QuoteRecord.java  Test.java
java/src/main/java/com/peak6/cachester/direct/: CachesterDirectReader.java  CachesterStoreMetadata.java  ReaderDirectMain.java  RecordDecoder.java
java/src/main/java/com/peak6/cachester/direct/update/: NewRecordListener.java  PrintingNewRecordListener.java  QuotePrintingUpdateListener.java  QuoteRecordDecoder.java  RecordAccessor.java  RecordUpdateListener.java
java/src/main/java/com/peak6/cachester/jna/: CachesterJnaReader.java  ReaderJnaMain.java
java/src/main/java/com/peak6/cachester/mapped/: CachesterMappedReader.java  CachesterMapppedFile.java
java/src/main/java/com/peak6/util/: EndiannessUtil.java  UnsafeUtil.java
lancaster/: a2i.h  advert.h  batch.h  clock.h  datum.h  dict.h  dump.h  error.h  h2n2h.h  int64.h  latency.h  poller.h  receiver.h  reporter.h  sender.h  sequence.h  signals.h  socket.h  spin.h  status.h  storage.h  sync.h  table.h  thread.h  toucher.h  twist.h  version.h  xalloc.h
lib/: Makefile  advert.c  circ.c  dict.h  dump.h  error.h  poller.h  sender.c  sender.h  signals.c  status.h  thread.h  xalloc.h  yield.c
m4/: header-config.m4  os-cpu-types.m4  sync-intrinsics.m4
pubmgr/: .gitignore  Makefile  main.go
scripts/: buildit  cron.submgr.roll  cron.submgr.start  cron.submgr.stop  find_parent_with.sh  go-update-deps.sh  installCrontab  pubctl  rollLogs  rollMgrLogs  startPubMgr  startSubMgr  startit  stopPubMgr  stopSubMgr  subctl
src/: a2i.c  a2i.h  advert.c  advert.h  batch.c  batch.h  clock.c  clock.h  copier.c  datum.h  deleter.c  dict.c  dict.h  dump.c  dump.h  eraser.c  error.c  error.h  grower.c  h2n2h.h  inspector.c  latency.c  latency.h  poller.c  poller.h  publisher.c  reader.c  receiver.c  receiver.h  reporter.c  reporter.h  sender.c  sender.h  sequence.h  signals.c  signals.h  socket.c  socket.h  spin.c  spin.h  (+19 more)
src/go/: Makefile
src/go/commander/: commander.go
src/go/lancaster/: batch.go  index.go  lancaster.go  multi_store_index.go
src/go/pubmux/: main.go
src/go/src/commander/: commander.go  death.go  nodeath.go
src/go/src/lancaster/: batch.go  index.go  lancaster.go  multi_store_index.go  record_location.go  writer.go
src/go/src/pubmux/: addrs.go  main.go
src/go/src/submux/: main.go
src/go/submux/: main.go
src/lisp/: clock.lisp  status.lisp  storage.lisp  test.lisp
submgr/: .gitignore  Makefile  main.go
